<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/image_game_puzzle"
            android:layout_height="@dimen/image_game_puzzle"
            android:src="@drawable/background_puzzle"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/button_resume"
            android:layout_width="wrap_content"
            android:text="@string/resume"
            android:layout_height="@dimen/button_function_height"
            android:textSize="@dimen/textsize_button_function"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_resume"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <Button
            android:id="@+id/button_choose_level"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_function_height"
            android:textSize="@dimen/textsize_button_function"
            android:text="@string/choose_level"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_resume"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_rate_app"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_function_height"
                android:textSize="@dimen/textsize_button_function"
                android:layout_weight="1"
                android:text="@string/rate"
                android:background="@drawable/button_resume"
                android:layout_margin="@dimen/activity_horizontal_margin"/>
            <Button
                android:id="@+id/button_share_app"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_function_height"
                android:textSize="@dimen/textsize_button_function"
                android:layout_weight="1"
                android:text="@string/share"
                android:background="@drawable/button_resume"
                android:layout_margin="@dimen/activity_horizontal_margin"/>
            <Button
                android:id="@+id/button_like_app"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_function_height"
                android:textSize="@dimen/textsize_button_function"
                android:layout_weight="1"
                android:text="@string/like"
                android:background="@drawable/button_resume"
                android:layout_margin="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>


<fragment
    android:id="@+id/fragment_navigation_drawer"
    android:name="com.example.asus.puzzleword.adapter.FragmentDrawer"
    android:layout_width="@dimen/nav_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:layout="@layout/fragment_navigation_drawer"
    tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
